[package]
name = "axelar-gmp"
version = "0.1.0"
edition = "2021"
authors = ["Collin Brittain <collin@peggy.cool"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = "0.3.5"
env_logger = "0.11.5"
log = { version = "0.4.22", features = ["kv", "kv_serde", "serde"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_alias = "0.0.2"
serde_json = "1.0.128"
tokio = "1.40.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
